        Reviewed by Dan Bernstein.

REGRESSION (WebKit2): Caps-Lock indicator sometimes doesn't appear in WebKit2
        https://bugs.webkit.org/show_bug.cgi?id=51230
        <rdar://problem/8780989>

        <rdar://problem/9015250> REGRESSION (WebKit2): Key events not fired for modifier keys

        * UIProcess/API/mac/WKView.mm:
        (-[WKView flagsChanged:]): Ported from WebHTMLView.
        (-[WKView _interpretKeyEvent:withCachedTextInputState:savingCommandsTo:WebCore::]):
        AppKit isn't happy about attempts to interpret NSFlagsChanged, but WK2 lacked the check.



Canonical link: https://commits.webkit.org/72654@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@82870 268f45cc-cd09-0410-ab3c-d52691b4dbfc